# handy-sdk-rs

./: Cargo.toml  README.md
.openapi-generator/: FILES
src/: lib.rs
src/apis/: base_api.rs  configuration.rs  hamp_api.rs  hdsp_api.rs  hssp_api.rs  hstp_api.rs  maintenance_api.rs  mod.rs  ota_api.rs  slide_api.rs  timesync_api.rs
src/models/: base_mode_errors.rs  branch.rs  connected_response.rs  error_response.rs  error_response_error.rs  error_response_error_code.rs  events.rs  firmware_status.rs  generic_error.rs  generic_result.rs  generic_result_response.rs  get_device_time_200_response.rs  get_device_time_200_response_one_of.rs  get_hamp_state_200_response.rs  get_hamp_state_200_response_one_of.rs  get_hamp_velocity_percent_200_response.rs  get_hssp_state_200_response.rs  get_hssp_state_200_response_one_of.rs  get_info_200_response.rs  get_loop_setting_200_response.rs  get_mode_200_response.rs  get_mode_200_response_one_of.rs  get_offset_200_response.rs  get_position_abs_200_response.rs  get_round_trip_delay_200_response.rs  get_round_trip_delay_200_response_one_of.rs  get_settings_200_response.rs  get_slide_200_response.rs  get_status_200_response.rs  get_update_status_200_response.rs  hamp_mode_errors.rs  hamp_response.rs  hamp_start_response.rs  hamp_state.rs  hamp_stop_200_response.rs  hamp_stop_response.rs  hamp_velocity_percent.rs  hamp_velocity_percent_response.rs  hdsp_mode_errors.rs  hdsp_request.rs  (+62 more)
