[package]
name = "handy-api"
version = "0.1.0-2.0.0-beta-3"
description = "Rust version of the Handy SDK" 
license = "MIT"
edition = "2021"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "^2.2"

[dependencies.reqwest]
version = "^0.12"
features = ["json", "multipart"]
